--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div class="ota">
+        <header>
+            <h5>Logo</h5>
+            <h5>navbar</h5>
+            <h5>navbar</h5>
+            <h5>navbar</h5>
+            <h5>navbar</h5>
+            <h5>navbar</h5>
+        </header>
+        <h1>1-Section</h1>
+
+        <div class="ota2">
+            <div class="bola">
+             Left
+            </div>
+            <div class="bola">
+                Right
+            </div>
+        </div>
+        <footer>
+            <h5>Logo</h5>
+            <h5>footer</h5>
+            <h5>footer</h5>
+            <h5>footer</h5>
+            <h5>footer</h5>
+            <h5>footer</h5>
+        </footer>
+    </div>
 
 </body>
+
 </html>
